[BlazorServer[(update) Kits Management
- Create/Update Form
- Page
- Tabs

--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
@@ -29,11 +29,9 @@
 					<div>
 						<span class="fw-bold rz-color-base-800 fs-4 me-2">Stock Management</span>
 						<span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span>
-						<span class="fw-bold rz-background-color-warning-lighter rz-border-radius-2 rz-color-warning fs-6 px-2 py-1">1000 near expiration stocks</span>
-						<span class="fw-bold rz-background-color-danger-lighter rz-border-radius-2 rz-color-danger fs-6 px-2 py-1">1000 expired</span>
 					</div>
 					<div>
-						<RadzenButton Click="ShowReceiveStockDialog" Icon="add" Text="Receive" ButtonStyle="ButtonStyle.Success"
+						<RadzenButton Click="ShowKitsCreateDialog" Icon="add" Text="Add Kit Type" ButtonStyle="ButtonStyle.Success"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
 						<RadzenButton Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
@@ -61,9 +59,9 @@
 
 @code
 {
-	async Task ShowReceiveStockDialog()
+	async Task ShowKitsCreateDialog()
 		{
-			var result = await _dialogService.OpenAsync("Receive Stock", ds => @<KitsCreateUpdate dialogService="ds" /> ,
+		var result = await _dialogService.OpenAsync("Create Kit", ds => @<KitsCreateUpdate /> ,
 			new DialogOptions()
 			{
 				CssClass = "rz-w-fit-content",
