--- a/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/MainLayout.razor
@@ -1,39 +1,16 @@
 ﻿@inherits LayoutComponentBase
 
 <RadzenComponents @rendermode="InteractiveServer" />
-@* <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div> *@
-<CascadingAuthenticationState>
-    <RadzenLayout>
-        <RadzenHeader class="shadow-sm" Style="box-shadow: var(--rz-shadow-0); background-color: var(--rz-white);">
-            <NavMenu />
-        </RadzenHeader>
-        <RadzenBody Style="background-color: var(--rz-base-200); padding: 0px">
-            @Body
-        </RadzenBody>
-        @*     <RadzenFooter class="shadow">
-        This is the Footer
-        </RadzenFooter> *@
-    </RadzenLayout>
-
-</CascadingAuthenticationState>
+<CascadingValues>
+	<CascadingAuthenticationState>
+		<RadzenLayout>
+			<RadzenHeader class="shadow-sm" Style="box-shadow: var(--rz-shadow-0); background-color: var(--rz-white);">
+				<NavMenu />
+			</RadzenHeader>
+			<RadzenBody Style="background-color: var(--rz-base-200); padding: 0px">
+				@Body
+			</RadzenBody>
+		</RadzenLayout>
+	</CascadingAuthenticationState>
+</CascadingValues>
 
