[BlazorServer](hotfix) TItem Updated

--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsCreateUpdate.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsCreateUpdate.razor
@@ -1,6 +1,6 @@
 ﻿<RadzenStack class="rz-vw-50" Orientation="Orientation.Vertical" AlignItems="AlignItems.Start" JustifyContent="JustifyContent.Start" Gap="1rem">
 	<RadzenText TextStyle="TextStyle.DisplayH5" Text="Create New Kit" class="fw-bold rz-color-primary" />
-	<RadzenTemplateForm TItem="KitsCreate">
+	<RadzenTemplateForm TItem="KitsCreateUpdate">
 		<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Normal" JustifyContent="JustifyContent.Normal" Gap="1rem">
 			<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Normal" JustifyContent="JustifyContent.Normal" Gap="10px">
 				<span class="fw-bold text-uppercase">Kit Name</span>
