--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsManagement.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsManagement.razor
@@ -1,5 +1,20 @@
-﻿<h3>KitsManagement</h3>
+﻿<RadzenStack Orientation="Orientation.Vertical" JustifyContent="JustifyContent.SpaceBetween" AlignItems="AlignItems.Normal">
+	<RadzenStack class="rz-w-100" Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End" AlignItems="AlignItems.Center">
+		<RadzenText TextStyle="TextStyle.Subtitle1" Text="Search" />
+		<RadzenTextBox Style="width: 100%; max-width: 400px;" Placeholder="Search ... " />
+	</RadzenStack>
+	<RadzenDataGrid TItem="KitViewModel">
+		<Columns>
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.ManufactureDate)" Title="Date Packed" FormatString="{0:MM/dd/yyyy}" Width="120px" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.Id)" Title="Kit Code" Width="80px" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.KitType)" Title="Type" Width="100px" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.Location)" Title="Location" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.ExpiryDate)" Title="Estimated Expiration" FormatString="{0:MM/dd/yyyy}" Width="120px" />
+			<RadzenDataGridColumn Title="Actions" Width="80px" >
+				<Template Context="data">
 
-@code {
-
-}
+				</Template>
+			</RadzenDataGridColumn>
+		</Columns>
+	</RadzenDataGrid>
+</RadzenStack>
