--- a/LAKAPSAGAP.BlazorServer/Pages/Warehouse/Warehouse.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Warehouse/Warehouse.razor
@@ -52,11 +52,9 @@ else
 						<RadzenDataList AllowVirtualization=false Style="width: 100%; margin-top: 0.75rem;" WrapItems="false" AllowPaging="true"
 										Data="@floor.RackList" PageSize="3" PagerHorizontalAlign="HorizontalAlign.Left" ShowPagingSummary="true">
 							<Template Context="rack">
-								<div style="width: 100%; height: 100%;" class="d-flex justify-content-center align-items-center gap-2">
-									<div class="w-25 h-100 fs-6 fw-bold text-capitalize rz-color-primary-light">
+								<div style="width: 100%; height: 100%;" class="d-flex justify-content-start align-items-center gap-2">
+									<div class="w-auto h-100 fs-6 fw-bold text-capitalize rz-color-primary-light">
 										@rack.Name
-									</div>
-									<div class="w-75 h-100 d-flex align-items-center justify-content-center flex-wrap gap-2">
 									</div>
 								</div>
 							</Template>
