refactor: preparation for Receiving Stocks Table UI changes

--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
@@ -56,77 +56,18 @@
 				</div>
 				<hr />
 				<h5 class="row w-100 fs-6 fw-bold text-uppercase" Style="color: var(--rz-success-light);">Stock Details</h5>
-				<div class="row w-100">
-					<div class="col w-full">
-						<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">Item Code</span>
-							<RadzenTextBox Style="width: 100%;" Placeholder="ITM-123" ReadOnly="true" Disabled="true" />
-						</div>
-					</div>
-					<div class="col w-full">
-						<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">Type</span>
-							<RadzenDropDown TValue="string" Placeholder="Instant Coffee" Style="width: 100%;" Name="Type" />
-						</div>
-					</div>
-					<div class="col w-full">
-						<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">Quantity</span>
-							<RadzenNumeric TValue="int" Min="0" Style="width: 100%;" />
-						</div>
-					</div>
-					<div class="col w-full">
-						<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">UoM</span>
-							<RadzenDropDown TValue="string" Placeholder="Packs / Sachets / Bags" Style="width: 100%;" Name="UoM" />
-						</div>
-					</div>
-				</div>
-				<div class="row w-100">
-					<div class="col w-full">
-						<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">Floor</span>
-							<RadzenDropDown TValue="string" Placeholder="Floor 1" Style="width: 100%;" Name="Floor" />
-						</div>
-					</div>
-					<div class="col w-full">
-						<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">Rack</span>
-							<RadzenDropDown TValue="string" Placeholder="Rack 1" Style="width: 100%;" Name="Rack" />
-						</div>
-					</div>
-					<div class="col w-full">
-						<div class="d-flex w-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">Expiry Date</span>
-							<RadzenDatePicker @bind-Value="@value" DateFormat="MM/dd/yyyy" Style="width: 100%;" />
-						</div>
-					</div>
-					<div class="col w-full">
-						<div class="d-flex w-100 h-100 flex-column align-items-start justify-content-start gap-1">
-							<span class="fw-bold text-uppercase">Add Stock</span>
-							<RadzenButton Style="width: 100%; height: 100%;" Variant="Variant.Outlined" ButtonStyle="ButtonStyle.Success" Shade="Shade.Light"
-										  Icon="add" Text="Confirm" />
-						</div>
-					</div>
-				</div>
 				<div class="row w-100 mt-3">
 					<RadzenDataGrid AllowColumnResize="false" AllowPaging="true" AllowSorting="true" AllowFiltering="false" ShowPagingSummary="true"
 									Data="@_tableData" PageSize="5"
 									Style="border-radius: var(--rz-border-radius-2);">
 						<Columns>
-							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Id)" Title="Item Code"
-												  TextAlign="TextAlign.Left" Width="80px" />
-							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ItemId)" Title="Item Name"
-												  TextAlign="TextAlign.Left" Width="150px" />
-							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.TypeId)" Title="Type"
-												  TextAlign="TextAlign.Left" Width="90px" />
-							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Quantity)" Title="Quantity"
-												  TextAlign="TextAlign.Left" Width="90px" />
-							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.UoMId)" Title="UoM"
-												  TextAlign="TextAlign.Left" Width="90px" />
-							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ExpiryDate)" Title="Expiration Date" FormatString="{0:MMM dd, yyyy}"
-												  TextAlign="TextAlign.Left" Width="90px" />
-							<RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px">
+							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ItemId)" Title="Item Code" TextAlign="TextAlign.Left" Width="80px" />
+							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ItemId)" Title="Item Name" TextAlign="TextAlign.Left" Width="150px" />
+							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.TypeId)" Title="Type" TextAlign="TextAlign.Left" Width="90px" />
+							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.Quantity)" Title="Quantity" TextAlign="TextAlign.Left" Width="90px" />
+							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.UoMId)" Title="UoM" TextAlign="TextAlign.Left" Width="90px" />
+							<RadzenDataGridColumn Property="@nameof(StockDetailViewModel.ExpiryDate)" Title="Expiration Date" FormatString="{0:MMM dd, yyyy}" TextAlign="TextAlign.Left" Width="90px" />
+							<RadzenDataGridColumn Title="Actions" TextAlign="TextAlign.Left" Width="60px"> 
 								<Template Context="data">
 									<RadzenButton ButtonStyle="ButtonStyle.Primary" Icon="edit" Style="border-radius: var(--rz-border-radius-2)" />
 									<RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="delete" Style="border-radius: var(--rz-border-radius-2)" />
