feat: Kit Assembly Creation Modal & View Model
- Created a Modal for Creating a Kit Type or Kit Assembly
- (ongoing) Creation of Dialog Header Component

--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
@@ -61,7 +61,7 @@
 {
 	async Task ShowKitsCreateDialog()
 		{
-		var result = await _dialogService.OpenAsync("Create Kit", ds => @<KitsCreateUpdate /> ,
+		var result = await _dialogService.OpenAsync("Create Kit", ds => @<KitTypeCreateUpdate /> ,
 			new DialogOptions()
 			{
 				CssClass = "rz-w-fit-content",
