--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsManagement.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsManagement.razor
@@ -5,11 +5,12 @@
 	</RadzenStack>
 	<RadzenDataGrid TItem="KitViewModel">
 		<Columns>
-			<RadzenDataGridColumn Property="@nameof(KitViewModel.ManufactureDate)" Title="Date Packed" FormatString="{0:MM/dd/yyyy}" Width="120px" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.ManufactureDate)" Title="Date Packed" FormatString="{0:MM/dd/yyyy}" Width="200px" />
 			<RadzenDataGridColumn Property="@nameof(KitViewModel.Id)" Title="Kit Code" Width="80px" />
-			<RadzenDataGridColumn Property="@nameof(KitViewModel.KitType)" Title="Type" Width="100px" />
-			<RadzenDataGridColumn Property="@nameof(KitViewModel.Location)" Title="Location" />
-			<RadzenDataGridColumn Property="@nameof(KitViewModel.ExpiryDate)" Title="Estimated Expiration" FormatString="{0:MM/dd/yyyy}" Width="120px" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.KitType)" Title="Type" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.Quantity)" Title="Quantity"  Width="120px"/>
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.Location)" Title="Location" Width="250px" />
+			<RadzenDataGridColumn Property="@nameof(KitViewModel.ExpiryDate)" Title="Estimated Expiration" FormatString="{0:MM/dd/yyyy}" Width="200px" />
 			<RadzenDataGridColumn Title="Actions" Width="80px" >
 				<Template Context="data">
 
