--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsCreateUpdate.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsCreateUpdate.razor
@@ -1,58 +1,5 @@
-﻿<RadzenStack class="rz-vw-50" Orientation="Orientation.Vertical" AlignItems="AlignItems.Start" JustifyContent="JustifyContent.Start" Gap="1rem">
-	<RadzenText TextStyle="TextStyle.DisplayH5" Text="Create New Kit" class="fw-bold rz-color-primary" />
-	<RadzenTemplateForm TItem="KitsCreateUpdate">
-		<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Normal" JustifyContent="JustifyContent.Normal" Gap="1rem">
-			<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Normal" JustifyContent="JustifyContent.Normal" Gap="10px">
-				<span class="fw-bold text-uppercase">Kit Name</span>
-				<RadzenAutoComplete @bind-Value="@Kit.Name" Data="@Kits" TextProperty="@nameof(KitViewModel.Name)" />
-			</RadzenStack>
-			<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Normal" JustifyContent="JustifyContent.Normal" Gap="10px">
-				<span class="fw-bold text-uppercase">Kit Components</span>
-				<RadzenDataGrid @ref="@KitsComponentsDG" Data="@KitsComponentList" TItem="@KitComponentViewModel"
-								AllowAlternatingRows="true" AllowPaging="true" PageSize="5" AllowSorting="!IsEditing"
-								EditMode="DataGridEditMode.Multiple" Density="Density.Compact" class="rz-border-radius-2"
-								RowUpdate="@OnUpdateRow" RowCreate="@OnCreateRow" Sort="@Reset" Page="@Reset" Filter="@Reset">
-					<Columns>
-						<RadzenDataGridColumn Property="@nameof(KitComponentViewModel.Id)" Title="Id" Width="70px">
-							<Template Context="data">
-								@(KitsComponentList.IndexOf(data) + 1)
-							</Template>
-						</RadzenDataGridColumn>
-						<RadzenDataGridColumn Property="@nameof(KitComponentViewModel.ItemName)" Title="Item Name" Width="150px">
-							<EditTemplate Context="data">
-								<RadzenAutoComplete @bind-Value="@data.ItemName" Name="ItemName" class="rz-display-block rz-w-100" />
-							</EditTemplate>
-						</RadzenDataGridColumn>
-						<RadzenDataGridColumn Property="@nameof(KitComponentViewModel.Quantity)" Title="Quantity" Width="150px">
-							<EditTemplate Context="data">
-								<RadzenNumeric @bind-Value="@data.Quantity" Name="Quantity" class="rz-display-block rz-w-100" />
-							</EditTemplate>
-						</RadzenDataGridColumn>
-						<RadzenDataGridColumn Title="Action" Width="100px" TextAlign="TextAlign.Center">
-							<Template Context="data">
-								<RadzenButton Variant="Variant.Text" Size="ButtonSize.Small" Icon="edit"
-											  Click="@(args => EditRow(data))" />
-							</Template>
-							<EditTemplate Context="data">
-								@{
-									var readingIsForInsertion = KitsComponentsToInsert.Contains(data);
-								}
-								<RadzenButton Size="ButtonSize.Small" ButtonStyle="ButtonStyle.Success"
-											  Icon="done" Click="@((args) => SaveRow(data))" aria-label="Save" />
-								<RadzenButton Visible=@(!readingIsForInsertion) Size="ButtonSize.Small"
-											  ButtonStyle="ButtonStyle.Dark" Shade="Shade.Lighter" Icon="close"
-											  Click="@(args => CancelEdit(data))" />
-								<RadzenButton Visible=@(!readingIsForInsertion) Size="ButtonSize.Small" ButtonStyle="ButtonStyle.Danger"
-											  Icon="delete" Click="@(args => DeleteRow(data))" />
-							</EditTemplate>
-						</RadzenDataGridColumn>
-					</Columns>
-				</RadzenDataGrid>
-			</RadzenStack>
-			<RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.End" Gap="10px">
-				<RadzenButton Text="Cancel" Icon="close" ButtonStyle="ButtonStyle.Base" Size="ButtonSize.Small" Click="@(() => _dialogService.Close(true))" />
-				<RadzenButton Text="Save" Icon="done_outline" ButtonStyle="ButtonStyle.Success" Shade="Shade.Light" Size="ButtonSize.Small" Click="@(() => SubmitKit())" />
-			</RadzenStack>
-		</RadzenStack>
+﻿<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.SpaceBetween">
+	<RadzenTemplateForm TItem="KitViewModel">
+		
 	</RadzenTemplateForm>
 </RadzenStack>
