--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
@@ -1,9 +1,24 @@
 ﻿@using static LAKAPSAGAP.Models.ViewModel.ReliefReceivedViewModel
 
+<RadzenTemplateForm>
+	<RadzenStack Style="max-width: 75dvw; padding: 0.25rem;">
+		<RadzenText class="fw-bold" Style="color: var(--rz-success);" TextStyle="TextStyle.DisplayH5" Text="Receive Stock" />
+
+		<RadzenFormField Text="Batch Number">
+			<ChildContent>
+				<RadzenTextBox Style="width: 100%;" Placeholder="BAT000" ReadOnly />
+			</ChildContent>
+			<Helper>
+
+			</Helper>
+		</RadzenFormField>
+	</RadzenStack>
+</RadzenTemplateForm>
+
 <MacroContainer Style="width: 100dvw; max-width: 75dvw; padding: 0.25rem">
 	<div class="tab-content w-100" id="myTabContent">
 		<div class="@($"tab-pane fade {(_activePane == "form" ? "show active" : "")}")" id="form-tab-pane" role="tabpanel" aria-labelledby="form-tab" tabindex="0">
-			<RadzenText class="fw-bold" Style="color: var(--rz-success);" TextStyle="TextStyle.DisplayH5" Text="Receive Stock" />
+
 			<form style="width: 100%;" class="d-grid gap-2">
 				<div class="row w-100">
 					<div class="col w-full">
