fix: commented unused ui

--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceiveStockForm.razor
@@ -1,6 +1,6 @@
 ﻿@using static LAKAPSAGAP.Models.ViewModel.ReliefReceivedViewModel
 
-<RadzenTemplateForm>
+@* <RadzenTemplateForm>
 	<RadzenStack Style="max-width: 75dvw; padding: 0.25rem;">
 		<RadzenText class="fw-bold" Style="color: var(--rz-success);" TextStyle="TextStyle.DisplayH5" Text="Receive Stock" />
 
@@ -13,7 +13,7 @@
 			</Helper>
 		</RadzenFormField>
 	</RadzenStack>
-</RadzenTemplateForm>
+</RadzenTemplateForm> *@
 
 <MacroContainer Style="width: 100dvw; max-width: 75dvw; padding: 0.25rem">
 	<div class="tab-content w-100" id="myTabContent">
