--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
@@ -16,7 +16,7 @@
 			@* Side Content *@
 
 			<div class="card p-3 d-flex flex-column align-items-start just-items-start" style="width: 20%; height: 100%;">
-				<Warehouse Id="@(id)"/>
+				<Warehouse Id="@(id)" />
 			</div>
 
 			@* Center Contents *@
@@ -31,7 +31,9 @@
 						<span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span>
 					</div>
 					<div>
-						<RadzenButton Click="ShowKitsCreateDialog" Icon="add" Text="Add Kit Type" ButtonStyle="ButtonStyle.Success"
+						<RadzenButton Visible="@(currentTab == 0)" Click="ShowKitTypeCreateDialog" Icon="add" Text="Add Kit Type" ButtonStyle="ButtonStyle.Success"
+									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
+						<RadzenButton Visible="@(currentTab == 1)" Click="ShowKitsCreateDialog" Icon="add" Text="Add New Kit" ButtonStyle="ButtonStyle.Success"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
 						<RadzenButton Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
@@ -40,7 +42,8 @@
 
 				@* Tabs *@
 
-				<RadzenTabs Style="border: 1px solid var(--rz-base-300); border-radius: var(--rz-border-radius-1); width: 100%; height: 100%;" TabPosition="TabPosition.Top" RenderMode="TabRenderMode.Client">
+				<RadzenTabs @bind-SelectedIndex="currentTab"
+							Style="border: 1px solid var(--rz-base-300); border-radius: var(--rz-border-radius-1); width: 100%; height: 100%;" TabPosition="TabPosition.Top">
 					<Tabs>
 						<RadzenTabsItem Text="Kits Availability">
 							<KitsAvailability />
@@ -59,13 +62,23 @@
 
 @code
 {
-	async Task ShowKitsCreateDialog()
-		{
-		var result = await _dialogService.OpenAsync("Create Kit", ds => @<KitsCreateUpdate /> ,
-			new DialogOptions()
+	async Task ShowKitTypeCreateDialog()
+	{
+		var result = await _dialogService.OpenAsync("Create Kit", ds => @<KitTypeCreateUpdate /> ,
+	new DialogOptions()
 			{
 				CssClass = "rz-w-fit-content",
 				ShowTitle = false,
 			});
-		}
+	}
+	
+	async Task ShowKitsCreateDialog()
+	{
+		var result = await _dialogService.OpenAsync("Create Kit", ds => @<KitsCreateUpdate /> ,
+	new DialogOptions()
+			{
+				CssClass = "rz-w-fit-content",
+				ShowTitle = false,
+			});
+	}
 }
