--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsAvailability.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/KitsAvailability.razor
@@ -1,4 +1,4 @@
-﻿<RadzenDataList WrapItems="true" AllowPaging="true" TItem="@Kit">
+﻿<RadzenDataList WrapItems="true" AllowPaging="true" TItem="@KitViewModel" Data="@KitList">
 	<Template Context="data">
 		<RadzenCard class="rz-w-50">
 			<RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.SpaceEvenly">
@@ -19,8 +19,6 @@
 		</RadzenCard>
 	</Template>
 	<EmptyTemplate>
-		<span>
-			No Kits Available.
-		</span>
+		<p style="color: lightgrey; font-size: 24px; text-align: center; margin: 2rem;">No records to display.</p>
 	</EmptyTemplate>
 </RadzenDataList>
