fix: code clean and added additional uri

--- a/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Security/AuthLogin.razor
@@ -1,7 +1,7 @@
-﻿@layout EmptyLayout
-
-
+﻿@page "/"
 @page "/account/login"
+
+@layout EmptyLayout
 
 @using LAKAPSAGAP.Models.ViewModels
 @using Microsoft.AspNetCore.Identity
@@ -56,15 +56,15 @@
         padding: 0.35rem 0.65rem;
     }
 
-        .input:hover {
-            border: 2px solid #b4cffd;
-        }
+    .input:hover {
+        border: 2px solid #b4cffd;
+    }
 
-        .input:active {
-            border: 2px solid #4388FB;
-        }
+    .input:active {
+        border: 2px solid #4388FB;
+    }
 
-        .input:focus {
-            border: 2px solid #4388FB;
-        }
+    .input:focus {
+        border: 2px solid #4388FB;
+    }
 </style>
