refactor: endpoint of account login

--- a/LAKAPSAGAP.BlazorServer/Shared/App.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/App.razor
@@ -21,8 +21,7 @@
 
 </html>
 @code {
-    [CascadingParameter]
-    private HttpContext HttpContext { get; set; } = default!;
+    [CascadingParameter] HttpContext HttpContext { get; set; } = default!;
 
     private IComponentRenderMode? RenderModeForPage => HttpContext.Request.Path.StartsWithSegments("/account")
         ? null
