--- a/LAKAPSAGAP.BlazorServer/Shared/App.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/App.razor
@@ -7,6 +7,7 @@
 	<base href="/" />
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="LAKAPSAGAP.BlazorServer.styles.css" />
+	<link rel="stylesheet" href="css/styles.css"/>
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<HeadOutlet @rendermode=RenderModeForPage />
 	<RadzenTheme Theme="material" @rendermode="InteractiveServer" />
