--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/Stocks.razor
@@ -65,12 +65,7 @@
 @code
 {
 	async Task ShowReceiveStockDialog()
-		{
-			var result = await _dialogService.OpenAsync("Receive Stock", ds => @<ReceiveStockForm dialogService="ds" /> ,
-			new DialogOptions()
-			{
-				CssClass = "rz-w-fit-content",
-				ShowTitle = false,
-			});
-		}
+	{
+		await _dialogService.OpenAsync<ReceiveStockForm>("", options: new() { CssClass = "rz-w-fit-content", ShowTitle = false});
+	}
 }
