--- a/LAKAPSAGAP.BlazorServer/Shared/App.razor
+++ b/LAKAPSAGAP.BlazorServer/Shared/App.razor
@@ -10,6 +10,11 @@
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<HeadOutlet @rendermode=RenderModeForPage />
 	<RadzenTheme Theme="material" @rendermode="InteractiveServer" />
+	<style>
+		/* *{
+			outline:red 1px dotted
+		} */
+	</style>
 </head>
 
 <body>
