--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
@@ -2,6 +2,7 @@
 
 @page "/Warehouse/{id}/Kits"
 @layout MainLayout
+@inherits LayoutComponentBase
 <PageTitle>Kits</PageTitle>
 
 <MacroBody>
@@ -16,7 +17,7 @@
 			@* Side Content *@
 
 			<div class="card p-3 d-flex flex-column align-items-start just-items-start" style="width: 20%; height: 100%;">
-				<Warehouse Id="@(id)" />
+				<Warehouse OnValueChanged="HandleValueChange"  Id="@(id)" />
 			</div>
 
 			@* Center Contents *@
@@ -31,8 +32,7 @@
 						<span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span>
 					</div>
 					<div>
-						<RadzenButton Visible="@(currentTab == 0)" Click="ShowKitTypeCreateDialog" Icon="add" Text="Add Kit Type" ButtonStyle="ButtonStyle.Success"
-									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
+						
 						<RadzenButton Visible="@(currentTab == 1)" Click="ShowKitsCreateDialog" Icon="add" Text="Add New Kit" ButtonStyle="ButtonStyle.Success"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
 						<RadzenButton Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success"
@@ -46,7 +46,10 @@
 							Style="border: 1px solid var(--rz-base-300); border-radius: var(--rz-border-radius-1); width: 100%; height: 100%;" TabPosition="TabPosition.Top">
 					<Tabs>
 						<RadzenTabsItem Text="Kits Availability">
-							<KitsAvailability />
+							@if(isDataInitialized)
+							{
+								<KitsAvailability />
+							}
 						</RadzenTabsItem>
 						<RadzenTabsItem Text="Kits Management">
 							<KitsManagement />
@@ -62,6 +65,8 @@
 
 @code
 {
+	bool isDataInitialized = false;
+
 	async Task ShowKitTypeCreateDialog()
 	{
 		var result = await _dialogService.OpenAsync("Create Kit", ds => @<KitTypeCreateUpdate /> ,
@@ -80,5 +85,11 @@
 				CssClass = "rz-w-fit-content",
 				ShowTitle = false,
 			});
+	}
+
+	void HandleValueChange(bool initialized)
+	{
+		isDataInitialized = initialized;
+		StateHasChanged();
 	}
 }
