--- a/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Stocks/ReceivedStocksDataGrid.razor
@@ -10,8 +10,8 @@
 			<Columns>
 				<RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.Id)" Title="Batch ID"
 									  TextAlign="TextAlign.Left" Width="60px" />
-				<RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.ReliefType)" Title="Receive Type"
-									  TextAlign="TextAlign.Left" Width="80px" />
+				@* <RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.ReliefType)" Title="Receive Type"
+									  TextAlign="TextAlign.Left" Width="80px" /> *@
 				<RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.ReceivedFrom)" Title="Supplier"
 									  TextAlign="TextAlign.Left" Width="90px" />
 				<RadzenDataGridColumn Property="@nameof(ReliefReceivedViewModel.ReceivedDate)" Title="Date Received"
