--- a/LAKAPSAGAP.BlazorServer/Shared/LoadingScreen.razor.css
+++ b/LAKAPSAGAP.BlazorServer/Shared/LoadingScreen.razor.css
@@ -1,11 +1,12 @@
 ﻿.cube-loader_bg {
     position: fixed;
-    z-index: 9999;
+    z-index: 9999 !important;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: white;
 }
 
 .cube-loader {
