--- a/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
+++ b/LAKAPSAGAP.BlazorServer/Pages/Kits/Kits.razor
@@ -17,7 +17,7 @@
 			@* Side Content *@
 
 			<div class="card p-3 d-flex flex-column align-items-start just-items-start" style="width: 20%; height: 100%;">
-				<Warehouse OnValueChanged="HandleValueChange"  Id="@(id)" />
+				<Warehouse OnValueChanged="HandleValueChange"  Id="@(id)" IsKits="true" />
 			</div>
 
 			@* Center Contents *@
@@ -32,7 +32,8 @@
 						<span class="fw-bold rz-background-color-success-lighter rz-border-radius-2 rz-color-success fs-6 px-2 py-1">1000 available</span>
 					</div>
 					<div>
-						
+						<RadzenButton Visible="@(currentTab == 0)" Click="ShowKitTypeCreateDialog" Icon="add" Text="Add Kit Type" ButtonStyle="ButtonStyle.Success"
+									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
 						<RadzenButton Visible="@(currentTab == 1)" Click="ShowKitsCreateDialog" Icon="add" Text="Add New Kit" ButtonStyle="ButtonStyle.Success"
 									  class="rz-border-radius-3 text-capitalize fw-bold" Style="letter-spacing: 0.25px;" />
 						<RadzenButton Icon="send" Text="Send Relief" ButtonStyle="ButtonStyle.Success"
